<resources>
    <string name="app_name">Peek.To</string>
    <string name="app_code">k3qyp</string>
    <string name="ios_package">com.takeapeek.ios</string>
    <string name="install_link">https://peek.to/install.html</string>
    <string name="app_name_lower">peek.to</string>
    <string name="label">Peek.To</string>
    <string name="no_connection">No Connection</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Error">Error</string>
    <string name="Exit">Exit</string>
    <string name="error_play_services">No Google Play Services available, Peek.To cannot operate.</string>
    <string name="error_download_peek">Could not download the peek right now. Please try again later.</string>
    <string name="permissions_title">Peek.To Permissions</string>
    <string name="error_permissions">Peek.To needs all permissions to work properly.\n\nIf you checked \'Never ask again\' you will need to reset Peek.To app permissions in Android Settings.</string>
    <string name="error_permissions_location">Location Permission was not granted. Please reinstall and grant all permissions.</string>
    <string name="error_location_service_title">Location Services are OFF</string>
    <string name="error_location_service_message">Peek.To requires Location Services to work properly. Please turn ON your location services such as GPS.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_map_googleapi_connection">There was an error connecting to Google Maps. Please try again later when you have a better connection.\nError message: %1$s</string>
    <string name="error_unknown">There was an unidentified error. Please try again.</string>
    <string name="record">Record</string>
    <string name="preview">Preview</string>
    <string name="upload">Upload</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">Peek.To needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t is not supported.</string>
    <string name="error_cannot_get_location">Could not get current location.\nPlease try again later.</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="intro_create_peek">Create a Peek to Enter</string>
    <string name="intro_record_3_seconds">Peek must be longer than 3 seconds</string>
    <string name="intro_why">Why do I need to create a peek to enter?</string>
    <string name="intro_details_title">Why do I need to create a peek to enter?</string>
    <string name="intro_details_text">Peek.To lets you see peeks from other people. By creating a peek you help them discover you and your surroundings.\n\n Only 1 peek is needed (we won\'t ask you
        again while you are here).
    </string>
    <string name="zoom">Zoom</string>
    <string name="clip_will_be_sent">Your Peek is being sent</string>
    <string name="enter_peek_title_here">Add a title to your Peek</string>
    <string name="error_configure_failed">Failed to configure camera</string>
    <string name="error_peek_too_short">Peek must be longer than 3 seconds</string>
    <string name="detecting_location_title1">Peek.To cannot detect your location.\nPerhaps try going outside for better GPS reception?</string>
    <string name="detecting_location_title2">Detecting your location...</string>
    <string name="error_starting_profile">There was an error starting the recording. Please press \'Back\' till you exit the application and then try again.</string>
    <string name="error_open_camera">There was an error opening your camera. Please try again.</string>
    <string name="intro_skip_peek">SKIP</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="age_restriction_title">Age Restriction</string>
    <string name="age_restriction_message">You must be atleast 13 years old to use Peek.To.</string>
    <string name="create_account_activity_title">Create Peek.To Account</string>
    <string name="create_account_message1">Create Account</string>
    <string name="create_account_country">Country</string>
    <string name="create_account_your_country">Your country\u003a</string>
    <string name="create_account_your_mobile">Mobile\u003a</string>
    <string name="create_account_your_name">Your Name\u003a</string>
    <string name="create_account_country_spinner_prompt">Country</string>
    <string name="create_account_country_spinner_long_prompt">Select your Country\u003a</string>
    <string name="create_account_terms_and_conditions">We will NEVER show your mobile number to other Peekers. Read our &lt;a href="%1$s"&gt;Privacy Policy&lt;/a&gt; to learn more.</string>
    <string name="create_account_check_terms_and_conditions">I accept the terms and conditions</string>
    <string name="create_account_ok_button">Signup</string>
    <string name="create_account_message_bottom">By proceeding you agree to Peek.To</string>
    <string name="create_account_empty_number">Please fill in a valid number and prefix</string>
    <string name="create_account_progress_message">Creating account\u2026</string>
    <string name="create_account_enter_code_message">Enter code here</string>
    <string name="verify_account_progress_message">Verifying account\u2026</string>
    <string name="request_call_progress_message">Requesting call\u2026</string>
    <string name="error_no_account">Error: No Peek.To account found. Please try to reinstall.</string>
    <string name="error_create_account">Could not create a Peek.To account at this time. Please try again later.</string>
    <string name="error_verify_account">Could not verify Peek.To account at this time. Please make sure you can receive SMS messages and try again.</string>
    <string name="error_loading_authentication">There was a problem loading the Authentication view.\n\nTry running Peek.To again.</string>
    <string name="error_authentication_no_connection">Cannot create a new account at this time, no available internet connection.\n\nPlease try again later.</string>
    <string name="error_non_valid_number">The number you filled in is not a valid mobile phone number.\n\nPlease make sure you fill in your correct number so that your friends can connect to you.
    </string>
    <string name="error_sms_timeout">SMS message not identified.\nPlease do one of the following\u003a</string>
    <string name="message_check_phone">If the number is incorrect, fix it</string>
    <string name="request_call">Call me</string>
    <string name="message_enter_code_manually">Enter code manually</string>
    <string name="to_use">To use</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="for_your_protection">For protection</string>
    <string name="verification_ooops">Ooops!</string>
    <string name="sms_sent_to_number_message">We\'ve sent you a code to\n%1$s\nto verify that this is your number</string>
    <string name="sms_no_verification_message">We couldn\'t detect the code.\nPlease check your number\nor request a new code</string>
    <string name="code">Code\u003a</string>
    <string name="message_edit_phone"><u>Change phone number</u></string>
    <string name="resend_sms_code"><u>Resend SMS code</u>
    </string>
    <string name="message_request_call"><u>Request voice code</u></string>
    <string name="verification_verified">Verified User</string>
    <string name="almost_done">Welcome\u2026</string>
    <string name="creating_peekto_account">Creating your Peek.To account</string>
    <string name="teaser_line_1">Take a picture.</string>
    <string name="teaser_line_2">Post to<b>Peek.To</b>.
    </string>
    <string name="teaser_line_3">Done!</string>
    <string name="teaser_ok">Ok\u2026</string>
    <string name="login_resend_edit_number_message">Your number\n%1$s</string>
    <string name="code_hint">Verification code</string>
    <string name="login_receive_sms_counter">Waiting for SMS to arrive in %1$d seconds...</string>
    <string name="profile_mobile_number">Mobile Number</string>
    <string name="button_verify">Verify</string>
    <string name="button_continue">Continue</string>
    <string name="create_account_verify_message">Detecting verification SMS\nThis might take a few moments\u2026</string>
    <string name="error_more_than_one_account">There is more than one Peek.To account. Please delete all of them and run the Peek.To app again.</string>
    <string name="account_already_exists">Peek.To account already exists.</string>
    <string name="create_account_only_in_app">A new Peek.To account can only be created in the Peek.To app.</string>
    <string name="create_account_verify_sms_error">Illegal verification code</string>
    <string name="title_activity_capture_clip">CaptureClipActivity</string>
    <string name="title_activity_user_map">User Map</string>
    <string name="verify_mobile_number">Verify mobile number</string>
    <string name="verify_mobile_number_explain">Please verify your mobile number so we know this works!</string>
    <string name="verify_mobile_number_title_verifying">Verifying...</string>
    <string name="verify_mobile_number_verifying_explain">Verifying your mobile number so we know this works!</string>
    <string name="display_name_pick_a_name">Pick a User Name</string>
    <string name="display_name_explain">Your User Name is your identity on Peek.To</string>
    <string name="display_name_hint">User Name</string>
    <string name="what_is_your_birthday">What is your Birthday?</string>
    <string name="date_of_birth_explain">Just making sure you are\nold enough to peek :)</string>
    <string name="date_of_birth_hint">Birthday</string>
    <string name="date_of_birth_dialog_title">Your Birthday</string>
    <string name="error_no_profile">There was an error getting the user feed. Please try again later.</string>
    <string name="title_activity_user_feed">User Feed</string>
    <string name="error_playing_peek">There was an error playing this peek, please try again later.</string>
    <string name="textview_user_feed_empty">This user has no peeks</string>
    <string name="near_address">Near %1$s, %2$s</string>
    <string name="search_location">Search</string>
    <string name="error_request_peek">There was an error requesting a peek, please try again later.</string>
    <string name="user_map_requested_peeks_to">Sent peek request to %1$d users</string>
    <string name="user_map_requested_peeks_to_one">Sent peek request to 1 user</string>
    <string name="trending_locations">Trending locations</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="set_relation_follow">You are now following %1$s.</string>
    <string name="coachmark_button">Got It!</string>
    <string name="coachmark4_title">Fantastic!</string>
    <string name="coachmark4_text">You just requested your first Peek!\nGreen markers show your active requests.</string>
</resources>