<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/fancy_show_case_view_4_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/pt_white"
        android:text="@string/coachmark4_title"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fancy_show_case_view_4_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fancy_show_case_view_4_title"
        android:layout_centerHorizontal="true"
        android:textColor="@color/pt_white"
        android:text="@string/coachmark4_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_fancy_show_case_view_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coachmark_button"
        android:background="@color/pt_shadow_gray"
        android:textSize="16sp"
        android:textColor="@color/pt_white"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp" />

</RelativeLayout>