<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/tap_darkgray"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:ignore="ContentDescription,HardcodedText" >

	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    
    <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical" >
    
	<!-- Fill number and send -->
    <LinearLayout
        android:id="@+id/login_linearlayout_fill_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >
	        
	    <!-- Text above number -->
	    
	    <TextView
       		android:id="@+id/login_textview_to_use"
          	android:layout_width="match_parent"
          	android:layout_height="wrap_content"
          	android:layout_gravity="start"
          	android:text="@string/to_use"
          	android:textColor="@color/tap_white"
          	android:textSize="48sp" />

	    <TextView
	        android:id="@+id/login_textview_type_your_phone_number"
	        android:layout_gravity="start"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:paddingTop="32dp"
	        android:text="@string/type_your_phone_number"
	        android:textColor="@color/tap_white"
	        android:textSize="24sp" />
	    
	    <!-- Prefix spinner and Number -->
	    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="75dp" >
			
		    <RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:gravity="center_horizontal" >
	
	            <Spinner
		            android:id="@+id/SpinnerCountry"
		            android:layout_width="130dp"
		            android:layout_height="match_parent"
		            android:spinnerMode="dropdown"
		            android:layout_alignParentLeft="true"
		            android:layout_alignBottom="@+id/edittext_number"
		            android:paddingBottom="7dp" />
	            
	            <EditText
	                android:id="@+id/edittext_number"
	                android:layout_width="190dp"
	                android:layout_height="wrap_content"
	                android:layout_toRightOf="@+id/SpinnerCountry"
	                android:textColor="@color/tap_white"
	                android:textSize="24sp"
	                android:hint="@string/profile_mobile_number"
	                android:textColorHint="@color/tap_white"
	                android:inputType="phone"
	                android:background="#00000000"
	                android:paddingBottom="7dp"
	                android:singleLine="true" >
	            </EditText>
		            
	            <View 
	                android:layout_width="wrap_content"
			        android:layout_height="4dp"
			        android:layout_alignLeft="@+id/SpinnerCountry"
			        android:layout_alignBottom="@+id/edittext_number"
			        android:layout_alignRight="@+id/edittext_number"
			        android:background="@color/tap_white" />
	            
	        </RelativeLayout>
	        
		    <!--ImageView
		        android:id="@+id/button_create_account"
		        android:layout_width="45dp"
		        android:layout_height="45dp"
		        android:layout_marginLeft="5dp"
		        android:paddingBottom="10dp"
		        android:scaleType="fitCenter"
		        android:src="@drawable/takeapeek_button" /-->
		    
        </LinearLayout>
        
	    <Button
	        android:id="@+id/button_create_account_disabled"
	        android:layout_width="wrap_content"
	        android:layout_height="50dp"
	        android:textColor="@color/textcolororange"
	        android:textSize="24sp"
	        android:text="@string/submit"
	        android:layout_gravity="center"
	        android:drawablePadding="7dp"
	        android:padding="10dp"
	        android:enabled="false"
	        android:clickable="false"
	        android:layout_marginTop="20dp"
	        android:background="@drawable/button_border_disabled"
	        android:drawableRight="@drawable/takeapeek_button" />
	    
	    <Button
	        android:id="@+id/button_create_account"
	        android:layout_width="wrap_content"
	        android:layout_height="50dp"
	        android:textColor="@color/textcolororange"
	        android:textSize="24sp"
	        android:text="@string/submit"
	        android:layout_gravity="center"
	        android:drawablePadding="7dp"
	        android:padding="10dp"
	        android:enabled="true"
	        android:clickable="true"
	        android:layout_marginTop="20dp"
	        android:background="@drawable/button_border_enabled"
	        android:drawableRight="@drawable/takeapeek_button"
	        android:visibility="gone" />
	    
	    <!-- Text below number -->
	    
	    <TextView
            android:id="@+id/terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_account_message_bottom"
            android:textColor="@color/tap_white"
            android:textColorLink="@color/linkcolor"
            android:background="#00000000"
            android:textSize="16sp" />
	    
	</LinearLayout>      
	<!-- End fill number and send -->  
	    
    <!-- Authentication progress -->
    <LinearLayout
        android:id="@+id/login_linearlayout_auth_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="gone" >
	        
	    <!-- Text above number -->
		<TextView
		    android:id="@+id/login_textview_verification_message_header"
        	android:layout_width="match_parent"
          	android:layout_height="wrap_content"
          	android:gravity="start"
          	android:text="@string/for_your_protection"
          	android:textColor="@color/tap_orange"
          	android:textSize="48sp" />
	    
	    <TextView
	        android:id="@+id/login_textview_verification_message"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="start"
			android:textColor="@color/tap_white"
			android:textSize="24sp" />
	    
	    <!-- Prefix text and code -->
	    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="45dp" >
		    
		    <RelativeLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:gravity="center_horizontal" >
	
	            <TextView
	                android:id="@+id/login_textview_code_title"
					android:layout_width="130dp"
					android:layout_height="wrap_content"
					android:gravity="right"
					android:text="@string/code"
					android:textColor="@color/tap_blue"
					android:textSize="24sp" />
	            
	            <EditText
	                android:id="@+id/editText_SMS_code"
	                android:layout_width="190dp"
	                android:layout_height="wrap_content"
	                android:layout_toRightOf="@+id/login_textview_code_title"
	                android:textColor="@color/tap_white"
	                android:textSize="24sp"
	                android:hint="@string/code_hint"
	                android:textColorHint="@color/tap_white"
	                android:gravity="center_horizontal"
	                android:background="#00000000"
	                android:paddingBottom="7dp"
	                android:inputType="textNoSuggestions"
	                android:singleLine="true" >
	            </EditText>
	            
	            <View 
	                android:layout_width="wrap_content"
			        android:layout_height="4dp"
			        android:layout_alignLeft="@+id/login_textview_code_title"
			        android:layout_alignBottom="@+id/editText_SMS_code"
			        android:layout_alignRight="@+id/editText_SMS_code"
			        android:background="@color/tap_white" />
	            
	        </RelativeLayout>
	        
		    <!-- ImageView
		        android:id="@+id/button_verify_account_submit"
		        android:layout_width="45dp"
		        android:layout_height="45dp"
		        android:layout_marginLeft="5dp"
		        android:paddingBottom="10dp"
		        android:scaleType="fitCenter"
		        android:src="@drawable/takeapeek_button" /-->
		    
        </LinearLayout>
        
	    <Button
	        android:id="@+id/button_verify_account_submit_disabled"
	        android:layout_width="wrap_content"
	        android:layout_height="50dp"
	        android:textColor="@color/textcolororange"
	        android:textSize="24sp"
	        android:text="@string/submit"
	        android:layout_gravity="center"
	        android:drawablePadding="7dp"
	        android:padding="10dp"
	        android:enabled="false"
	        android:clickable="false"
	        android:layout_marginTop="20dp"
	        android:background="@drawable/button_border_disabled"
	        android:drawableRight="@drawable/takeapeek_button" />
	    
	    <Button
	        android:id="@+id/button_verify_account_submit"
	        android:layout_width="wrap_content"
	        android:layout_height="50dp"
	        android:textColor="@color/textcolororange"
	        android:textSize="24sp"
	        android:text="@string/submit"
	        android:layout_gravity="center"
	        android:drawablePadding="7dp"
	        android:padding="10dp"
	        android:enabled="true"
	        android:clickable="true"
	        android:layout_marginTop="20dp"
	        android:background="@drawable/button_border_enabled"
	        android:drawableRight="@drawable/takeapeek_button"
	        android:visibility="gone" />
	    
	    <!-- Text below code -->
	    <!-- Progress text and animation -->
	    <TextView
	        android:id="@+id/login_textview_progress_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/create_account_verify_message"
            android:textColor="@color/tap_orange"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />
	    
	    <ImageView
	    	android:id="@+id/progress_verify"
	    	android:padding="10dp"
			android:layout_width="70dp"
			android:layout_height="70dp"
			android:layout_marginTop="5dp"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/progress" />
	    
	    <!-- Resend options -->
	    <LinearLayout
	        android:id="@+id/login_linearlayout_resend_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp" >
		    
	        <TextView
			    android:id="@+id/login_resend_code"
	        	android:layout_width="match_parent"
	          	android:layout_height="wrap_content"
	          	android:layout_gravity="start"
	          	android:text="@string/resend_sms_code"
	          	android:textColor="@color/linkcolor"
	          	android:background="#00000000"
	          	android:textSize="16sp" />
	        
	        <TextView
			    android:id="@+id/login_resend_request_call"
	        	android:layout_width="match_parent"
	          	android:layout_height="wrap_content"
	          	android:layout_gravity="start"
	          	android:text="@string/message_request_call"
	          	android:textColor="@color/linkcolor"
	          	android:layout_marginTop="10dp"
	          	android:background="#00000000"
	          	android:textSize="16sp" />
	        
	        <TextView
			    android:id="@+id/login_resend_edit_number_message"
	        	android:layout_width="match_parent"
	          	android:layout_height="wrap_content"
	          	android:layout_gravity="start"
	          	android:textColor="@color/tap_white"
	          	android:layout_marginTop="15dp"
	          	android:textSize="24sp" />
	        
	        <TextView
			    android:id="@+id/login_resend_edit_number"
	        	android:layout_width="match_parent"
	          	android:layout_height="wrap_content"
	          	android:layout_gravity="start"
	          	android:text="@string/message_edit_phone"
	          	android:textColor="@color/linkcolor"
	          	android:layout_marginTop="10dp"
	          	android:background="#00000000"
	          	android:textSize="16sp" />
	    </LinearLayout>
	</LinearLayout>  
	
    <!-- End Authentication progress -->
	
    <!-- Teaser -->
    <RelativeLayout
        android:id="@+id/login_relativelayout_teaser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:visibility="gone" >
	    
        <TextView
		    android:id="@+id/login_textview_teaser_line_1"
        	android:layout_width="match_parent"
          	android:layout_height="wrap_content"
          	android:gravity="start"
          	android:layout_alignParentTop="true"
          	android:layout_alignParentLeft="true"
          	android:layout_alignParentStart="true"
          	android:text="@string/teaser_line_1"
          	android:textColor="@color/tap_darkorange"
          	android:textSize="48sp" />
        
        <TextView
		    android:id="@+id/login_textview_teaser_line_2"
        	android:layout_width="match_parent"
          	android:layout_height="wrap_content"
          	android:paddingTop="20dp"
          	android:gravity="start"
          	android:layout_below="@+id/login_textview_teaser_line_1"
          	android:layout_alignParentLeft="true"
          	android:layout_alignParentStart="true"
          	android:text="@string/teaser_line_2"
          	android:textColor="@color/tap_blue"
          	android:textSize="48sp" />
        
        <TextView
		    android:id="@+id/login_textview_teaser_line_3"
        	android:layout_width="match_parent"
          	android:layout_height="wrap_content"
          	android:paddingTop="20dp"
          	android:gravity="start"
          	android:layout_below="@+id/login_textview_teaser_line_2"
          	android:layout_alignParentLeft="true"
          	android:layout_alignParentStart="true"
          	android:text="@string/teaser_line_3"
          	android:textColor="@color/tap_orange"
          	android:textSize="48sp" />
        
        <Button
	        android:id="@+id/login_button_teaser_ok"
	        android:layout_width="wrap_content"
	        android:layout_height="50dp"
	        android:layout_below="@+id/login_textview_teaser_line_3"
	        android:textColor="@color/textcolororange"
	        android:textSize="24sp"
	        android:text="@string/teaser_ok"
	        android:background="@drawable/button_border_enabled"
	        android:layout_centerHorizontal="true"
	        android:drawablePadding="7dp"
	        android:layout_marginTop="50dp"
	        android:padding="10dp"
	        android:drawableRight="@drawable/takeapeek_button"
	        android:drawableEnd="@drawable/takeapeek_button" />
        
    </RelativeLayout>
    </LinearLayout>
	</ScrollView>
</LinearLayout>
